ProyectoFinal/DataScriptParser.py
# Generated from DataScript.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DataScriptParser ( Parser ):

    grammarFileName = "DataScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'funcion'", "'('", "')'", "'{'", 
                     "'}'", "','", "'Si'", "'Sino'", "'Mientras'", "'Para'", 
                     "';'", "'leer('", "'imprimir('", "'graficar'", "'barras'", 
                     "'lineas'", "'dispersion'", "'histograma'", "'abrir('", 
                     "'cerrar('", "'escribir('", "'borrar('", "'leerLinea('", 
                     "'leerTodo('", "'Retornar'", "'Punto('", "'Cruz('", 
                     "'Inversa('", "'Transpuesta('", "'Raiz('", "'entero('", 
                     "'.separar()'", "'['", "']'", "'.agregar('", "'.indice('", 
                     "'.tam()'", "'.borrar('", "'.eliminar()'", "'.llaves()'", 
                     "'.valores()'", "'.actualizar('", "':'", "'arreglo('", 
                     "'arr.'", "'mc('", "'cargarCSV('", "'.guardarCSV('", 
                     "'.fila('", "'.filtrar('", "'.agregarColumna('", "'.eliminarColumna('", 
                     "'.descripcion()'", "'.cabeza('", "'.unir('", "'.columna('", 
                     "'cos('", "'sen('", "'tan('", "<INVALID>", "'&'", "'|'", 
                     "'!'", "<INVALID>", "'*'", "'/'", "'+'", "'-'", "'%'", 
                     "'//'", "'^'", "'<<'", "'<='", "'>>'", "'>='", "'=='", 
                     "'tan'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "TYPE", "AND", "OR", "NOT", "BOL", "MUL", 
                      "DIV", "ADD", "SUB", "MOD", "DIVE", "POW", "MIN", 
                      "MINE", "GRE", "GREE", "EQU", "TAN", "ID", "INT", 
                      "FLO", "IMG", "HEX", "STR", "COMENTARIO", "NEWLINE", 
                      "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_assignment = 2
    RULE_functionProc = 3
    RULE_parametros = 4
    RULE_args = 5
    RULE_structureControl = 6
    RULE_ifStatement = 7
    RULE_whileStatement = 8
    RULE_forStatement = 9
    RULE_print = 10
    RULE_graphType = 11
    RULE_graphParams = 12
    RULE_fileOperation = 13
    RULE_reading = 14
    RULE_expr = 15
    RULE_exprL = 16
    RULE_exprA = 17
    RULE_list = 18
    RULE_dict = 19
    RULE_dictItem = 20
    RULE_array = 21
    RULE_dataFrame = 22
    RULE_column = 23
    RULE_filter = 24
    RULE_complex = 25
    RULE_trigFunc = 26

    ruleNames =  [ "prog", "stat", "assignment", "functionProc", "parametros", 
                   "args", "structureControl", "ifStatement", "whileStatement", 
                   "forStatement", "print", "graphType", "graphParams", 
                   "fileOperation", "reading", "expr", "exprL", "exprA", 
                   "list", "dict", "dictItem", "array", "dataFrame", "column", 
                   "filter", "complex", "trigFunc" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    TYPE=61
    AND=62
    OR=63
    NOT=64
    BOL=65
    MUL=66
    DIV=67
    ADD=68
    SUB=69
    MOD=70
    DIVE=71
    POW=72
    MIN=73
    MINE=74
    GRE=75
    GREE=76
    EQU=77
    TAN=78
    ID=79
    INT=80
    FLO=81
    IMG=82
    HEX=83
    STR=84
    COMENTARIO=85
    NEWLINE=86
    WS=87

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DataScriptParser.StatContext)
            else:
                return self.getTypedRuleContext(DataScriptParser.StatContext,i)


        def getRuleIndex(self):
            return DataScriptParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = DataScriptParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.stat()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & -7205231612442653396) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 6258723) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DataScriptParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExpressionContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DataScriptParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(DataScriptParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(DataScriptParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)


    class BlankContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DataScriptParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(DataScriptParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlank" ):
                listener.enterBlank(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlank" ):
                listener.exitBlank(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlank" ):
                return visitor.visitBlank(self)
            else:
                return visitor.visitChildren(self)


    class FileOpContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DataScriptParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def fileOperation(self):
            return self.getTypedRuleContext(DataScriptParser.FileOperationContext,0)

        def NEWLINE(self):
            return self.getToken(DataScriptParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFileOp" ):
                listener.enterFileOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFileOp" ):
                listener.exitFileOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFileOp" ):
                return visitor.visitFileOp(self)
            else:
                return visitor.visitChildren(self)


    class FunctionContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DataScriptParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionProc(self):
            return self.getTypedRuleContext(DataScriptParser.FunctionProcContext,0)

        def NEWLINE(self):
            return self.getToken(DataScriptParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)


    class StatementContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DataScriptParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignment(self):
            return self.getTypedRuleContext(DataScriptParser.AssignmentContext,0)

        def NEWLINE(self):
            return self.getToken(DataScriptParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)


    class ShowContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DataScriptParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def print_(self):
            return self.getTypedRuleContext(DataScriptParser.PrintContext,0)

        def NEWLINE(self):
            return self.getToken(DataScriptParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow" ):
                listener.enterShow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow" ):
                listener.exitShow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow" ):
                return visitor.visitShow(self)
            else:
                return visitor.visitChildren(self)


    class ControlContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DataScriptParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structureControl(self):
            return self.getTypedRuleContext(DataScriptParser.StructureControlContext,0)

        def NEWLINE(self):
            return self.getToken(DataScriptParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterControl" ):
                listener.enterControl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitControl" ):
                listener.exitControl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitControl" ):
                return visitor.visitControl(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = DataScriptParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = DataScriptParser.ExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.expr()
                self.state = 60
                self.match(DataScriptParser.NEWLINE)
                pass

            elif la_ == 2:
                localctx = DataScriptParser.StatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.assignment()
                self.state = 63
                self.match(DataScriptParser.NEWLINE)
                pass

            elif la_ == 3:
                localctx = DataScriptParser.ShowContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.print_()
                self.state = 66
                self.match(DataScriptParser.NEWLINE)
                pass

            elif la_ == 4:
                localctx = DataScriptParser.ControlContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.structureControl()
                self.state = 69
                self.match(DataScriptParser.NEWLINE)
                pass

            elif la_ == 5:
                localctx = DataScriptParser.FunctionContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.functionProc()
                self.state = 72
                self.match(DataScriptParser.NEWLINE)
                pass

            elif la_ == 6:
                localctx = DataScriptParser.FileOpContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 74
                self.fileOperation()
                self.state = 75
                self.match(DataScriptParser.NEWLINE)
                pass

            elif la_ == 7:
                localctx = DataScriptParser.BlankContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 77
                self.match(DataScriptParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DataScriptParser.RULE_assignment

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignContext(AssignmentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DataScriptParser.AssignmentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(DataScriptParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(DataScriptParser.ExprContext,0)

        def reading(self):
            return self.getTypedRuleContext(DataScriptParser.ReadingContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)



    def assignment(self):

        localctx = DataScriptParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            localctx = DataScriptParser.AssignContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(DataScriptParser.ID)
            self.state = 81
            self.match(DataScriptParser.T__0)
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 5, 26, 27, 28, 29, 30, 31, 32, 34, 45, 46, 47, 48, 58, 59, 60, 63, 64, 65, 69, 79, 80, 81, 82, 83, 84]:
                self.state = 82
                self.expr()
                pass
            elif token in [24, 25]:
                self.state = 83
                self.reading()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionProcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DataScriptParser.RULE_functionProc

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FunctionStatementContext(FunctionProcContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DataScriptParser.FunctionProcContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(DataScriptParser.ID, 0)
        def parametros(self):
            return self.getTypedRuleContext(DataScriptParser.ParametrosContext,0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DataScriptParser.StatContext)
            else:
                return self.getTypedRuleContext(DataScriptParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionStatement" ):
                listener.enterFunctionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionStatement" ):
                listener.exitFunctionStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionStatement" ):
                return visitor.visitFunctionStatement(self)
            else:
                return visitor.visitChildren(self)



    def functionProc(self):

        localctx = DataScriptParser.FunctionProcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionProc)
        self._la = 0 # Token type
        try:
            localctx = DataScriptParser.FunctionStatementContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(DataScriptParser.T__1)
            self.state = 87
            self.match(DataScriptParser.ID)
            self.state = 88
            self.match(DataScriptParser.T__2)
            self.state = 89
            self.parametros()
            self.state = 90
            self.match(DataScriptParser.T__3)
            self.state = 91
            self.match(DataScriptParser.T__4)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -7205231612442653396) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 6258723) != 0):
                self.state = 92
                self.stat()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(DataScriptParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DataScriptParser.ID)
            else:
                return self.getToken(DataScriptParser.ID, i)

        def getRuleIndex(self):
            return DataScriptParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametros" ):
                return visitor.visitParametros(self)
            else:
                return visitor.visitChildren(self)




    def parametros(self):

        localctx = DataScriptParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [79]:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.match(DataScriptParser.ID)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 102
                    self.match(DataScriptParser.T__6)
                    self.state = 103
                    self.match(DataScriptParser.ID)
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DataScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(DataScriptParser.ExprContext,i)


        def getRuleIndex(self):
            return DataScriptParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = DataScriptParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [3, 5, 26, 27, 28, 29, 30, 31, 32, 34, 45, 46, 47, 48, 58, 59, 60, 63, 64, 65, 69, 79, 80, 81, 82, 83, 84]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.expr()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 113
                    self.match(DataScriptParser.T__6)
                    self.state = 114
                    self.expr()
                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructureControlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStatement(self):
            return self.getTypedRuleContext(DataScriptParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(DataScriptParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(DataScriptParser.ForStatementContext,0)


        def getRuleIndex(self):
            return DataScriptParser.RULE_structureControl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructureControl" ):
                listener.enterStructureControl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructureControl" ):
                listener.exitStructureControl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructureControl" ):
                return visitor.visitStructureControl(self)
            else:
                return visitor.visitChildren(self)




    def structureControl(self):

        localctx = DataScriptParser.StructureControlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_structureControl)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.ifStatement()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.whileStatement()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.forStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DataScriptParser.RULE_ifStatement
